# markewer

./: .gitignore  CLAUDE.md  CNAME  MERGE_GUIDE.md  Makefile  README.md  index.html  prd.md  techspec.md
.github/workflows/: auto-tag.yml  deploy-website.yml  release-tauri.yml  release.yml
Sources/Markewer/: Info.plist  main.swift
Sources/Markewer/Resources/: style.css
apps/copilot-server/: README.md  package-lock.json  package.json  server.js
apps/copilot-server/agent-cli/: copilot-ui.html  package.json  server.ts
apps/macos/: Makefile  project.yml
apps/macos/Sources/Arandu/: Info.plist  main.swift
apps/macos/scripts/: arandu  install.sh  markewer
apps/tauri/: Makefile  package-lock.json  package.json
apps/tauri/src/: app.css  components.css  highlight-dark.min.css  highlight-light.min.css  highlight.min.js  index.html  main.js  recording.html
apps/tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: cli_installer.rs  history.rs  ipc.rs  ipc_common.rs  lib.rs  main.rs  tcp_ipc.rs  tray.rs
apps/tauri/src-tauri/src/whisper/: audio.rs  commands.rs  mod.rs  model_manager.rs  transcriber.rs  watcher.rs
apps/web/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/.lovable/: plan.md
apps/web/src/: index.css
css/: site.css
homebrew/Casks/: arandu.rb
scripts/: build-dev.sh  install.sh
shared/: style.css
website/: index.html
website/css/: site.css
website/js/: site.js
(+11 files in other folders)
