[package]
name = "arandu"
version = "0.2.0"
edition = "2021"

[lib]
name = "arandu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = { version = "0.36", default-features = false, features = ["syntect"] }
notify = "7"
tauri-plugin-updater = "2"
cpal = "0.15"
rubato = "0.16"
whisper-rs = "0.14"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["fs"] }
futures-util = "0.3"
sha2 = "0.10"
